--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -74,6 +74,19 @@
         .file-chip { display: inline-flex; align-items: center; gap: 4px; background: #f0f0f0; padding: 4px 10px; border-radius: 20px; font-size: 11px; margin: 4px 2px; }
         .file-chip .x { cursor: pointer; color: #f44336; font-weight: bold; margin-left: 2px; }
         .file-processing { font-size: 11px; color: #FF9800; margin-top: 4px; }
+        
+        /* File cards */
+        .file-card { background: white; border: 1px solid #e0e0e0; border-radius: 8px; margin: 8px 0; overflow: hidden; }
+        .file-card-header { display: flex; align-items: center; padding: 8px 12px; border-bottom: 1px solid #f0f0f0; }
+        .file-icon { font-size: 16px; margin-right: 8px; }
+        .file-name { flex: 1; font-size: 13px; font-weight: 500; }
+        .file-actions { display: flex; align-items: center; gap: 8px; }
+        .analyzed-badge { background: #4CAF50; color: white; font-size: 10px; padding: 2px 6px; border-radius: 10px; }
+        .file-remove { cursor: pointer; color: #f44336; font-weight: bold; font-size: 16px; padding: 2px 4px; }
+        .file-remove:hover { background: #ffebee; border-radius: 3px; }
+        .file-description { padding: 8px 12px; }
+        .file-description textarea { width: 100%; border: 1px solid #e0e0e0; border-radius: 4px; padding: 6px; font-size: 12px; resize: vertical; min-height: 60px; font-family: inherit; }
+        .file-description textarea:focus { border-color: #667eea; outline: none; }
 
         /* Sidebar - transcript */
         .sidebar-header { padding: 14px 16px; border-bottom: 1px solid #e0e0e0; font-size: 13px; font-weight: 600; color: #333; display: flex; align-items: center; gap: 6px; }
@@ -86,6 +99,8 @@
 
         .error { background: #ffebee; color: #c62828; padding: 10px 16px; font-size: 13px; display: none; }
         .hidden { display: none !important; }
+        /* Hide Vapi's default floating call button */
+        #vapi-support-btn, .vapi-btn, [id^="vapi"] { display: none !important; position: absolute !important; left: -9999px !important; }
     </style>
 </head>
 <body>
@@ -95,8 +110,10 @@
             <div class="header">
                 <h1>🎙️ VoiceReq AI</h1>
                 <div class="header-actions">
+                    <a href="/dashboard" class="header-btn" style="text-decoration: none; color: white;">🏠 Portal</a>
                     <button class="header-btn" onclick="exportZip()">📦 Export Zip</button>
                     <button class="header-btn" onclick="resetAll()">🔄 New</button>
+                    <a href="/logout" class="header-btn" style="text-decoration: none; color: white;">🚪 Logout</a>
                 </div>
             </div>
 
@@ -113,7 +130,7 @@
 
             <div class="controls">
                 <button class="ctrl-btn ctrl-call" id="callBtn" onclick="toggleCall()">📞 Start</button>
-                <button class="ctrl-btn ctrl-mute hidden" id="muteBtn" onclick="toggleMute()">✋ Let Me Speak</button>
+                <button class="ctrl-btn ctrl-mute hidden" id="muteBtn" onclick="toggleMute()">✋ Hold AI</button>
                 <button class="ctrl-btn ctrl-mic hidden" id="micBtn" onclick="toggleMic()">🎤 Mute</button>
                 <div class="text-input-wrap">
                     <input type="text" id="textInput" placeholder="Type a message..." onkeydown="if(event.key==='Enter')sendText()">
