Rename VoiceReq AI to Morti Projects

--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VoiceReq AI - Voice-Powered Requirements Gathering</title>
+    <title>Morti Projects - Voice-Powered Requirements Gathering</title>
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: #f0f2f5; min-height: 100vh; }
@@ -108,7 +108,7 @@
         <!-- Main panel -->
         <div class="main">
             <div class="header">
-                <h1>🎙️ VoiceReq AI</h1>
+                <h1>🎙️ Morti Projects</h1>
                 <div class="header-actions">
                     <a href="/dashboard" class="header-btn" style="text-decoration: none; color: white;">🏠 Portal</a>
                     <button class="header-btn" onclick="exportZip()">📦 Export Zip</button>
