Streamline admin nav: shared partial, remove Sessions tab, fix breadcrumbs

--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -183,6 +183,7 @@
                 <div class="content-header">
                     <h3>📋 Requirements Analysis</h3>
                     <button id="refreshReqBtn" class="btn btn-success btn-sm" onclick="refreshRequirements()">🔄 Refresh Requirements</button>
+                    <button class="btn btn-sm" style="background:#ef4444;color:white;margin-left:6px;" onclick="clearRequirements()">🗑 Clear</button>
                 </div>
                 <div class="empty-state" id="emptyState">
                     <span class="emoji">📋</span>
