--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1066,6 +1066,12 @@
 
             <div class="toolbar-divider"></div>
 
+            <button class="tb-icon" onclick="document.getElementById('feedbackModal').style.display='flex'" title="Send feedback">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
+            </button>
+
+            <div class="toolbar-divider"></div>
+
             <button class="tb-text-btn complete" onclick="showCompleteModal()" title="Save and exit">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="10 17 15 12 10 7"/></svg>
                 Save &amp; Exit
@@ -1806,5 +1812,35 @@
     // ── Init ──
     window.addEventListener('load',()=>{initVapi();setupAutoSave();loadSessionData();});
     </script>
+<!-- Feedback Modal -->
+<div id="feedbackModal" style="display:none;position:fixed;inset:0;z-index:9999;background:rgba(0,0,0,0.6);backdrop-filter:blur(4px);align-items:center;justify-content:center;">
+  <div style="background:#0f1d32;border:1px solid rgba(255,255,255,0.1);border-radius:16px;padding:28px;max-width:480px;width:90%;">
+    <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:16px;">
+      <h3 style="font-size:1.1rem;font-weight:700;">💡 Feedback</h3>
+      <button onclick="document.getElementById('feedbackModal').style.display='none'" style="background:none;border:none;font-size:24px;cursor:pointer;color:rgba(240,244,248,0.4);">&times;</button>
+    </div>
+    <textarea id="feedbackText" rows="4" placeholder="Tell us what you'd like to see, or what could be better..." style="width:100%;padding:12px;border:1px solid rgba(255,255,255,0.08);border-radius:12px;font-size:0.88rem;font-family:'Inter',sans-serif;resize:vertical;background:rgba(5,13,26,0.6);color:#f0f4f8;"></textarea>
+    <div id="feedbackStatus" style="font-size:0.82rem;margin:8px 0;min-height:20px;"></div>
+    <div style="display:flex;gap:10px;justify-content:flex-end;">
+      <button onclick="document.getElementById('feedbackModal').style.display='none'" style="padding:10px 24px;border:1px solid rgba(255,255,255,0.08);border-radius:50px;background:transparent;cursor:pointer;font-size:0.88rem;color:rgba(240,244,248,0.7);font-family:'Inter',sans-serif;">Cancel</button>
+      <button onclick="submitFeedback()" style="padding:10px 24px;border:none;border-radius:50px;background:#1199fa;color:white;cursor:pointer;font-weight:600;font-size:0.88rem;box-shadow:0 0 16px rgba(17,153,250,0.4);font-family:'Inter',sans-serif;">Submit</button>
+    </div>
+  </div>
+</div>
+<script>
+async function submitFeedback(){
+  const text=document.getElementById('feedbackText').value.trim();
+  if(!text)return;
+  const st=document.getElementById('feedbackStatus');
+  st.innerHTML='Submitting...';st.style.color='rgba(240,244,248,0.4)';
+  try{
+    const r=await fetch('/api/feature-request',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({text,page:'voice-session'})});
+    if(!r.ok)throw new Error('Failed');
+    st.innerHTML='✅ Thank you! Your feedback has been submitted.';st.style.color='#009e7e';
+    document.getElementById('feedbackText').value='';
+    setTimeout(()=>{document.getElementById('feedbackModal').style.display='none';st.innerHTML='';},2000);
+  }catch(e){st.innerHTML='❌ Failed to submit. Please try again.';st.style.color='#ef4444';}
+}
+</script>
 </body>
 </html>
