--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1072,9 +1072,9 @@
 
             <div class="toolbar-divider"></div>
 
-            <button class="tb-text-btn complete" onclick="showCompleteModal()" title="Save and exit">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/><polyline points="10 17 15 12 10 7"/></svg>
-                Save &amp; Exit
+            <button class="tb-text-btn complete" onclick="showCompleteModal()" title="Save and choose next step">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20 6 9 17l-5-5"/></svg>
+                Done
             </button>
         </div>
 
@@ -1095,9 +1095,9 @@
                         </div>
                     </div>
                     <div class="req-header-actions">
-                        <button class="pill-btn primary" id="refreshBtn" onclick="refreshRequirements()">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"/><path d="M16 16h5v5"/></svg>
-                            Refresh
+                        <button class="pill-btn primary" id="refreshBtn" onclick="refreshRequirements()" title="AI analyses your conversation and builds requirements">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
+                            Analyse Requirements
                         </button>
                         <button class="pill-btn" onclick="copyAllReqs()" title="Copy all">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="14" height="14" x="8" y="8" rx="2" ry="2"/><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"/></svg>
@@ -1192,22 +1192,24 @@
 
     <!-- Complete session modal -->
     <div class="modal-backdrop" id="completeModal">
-        <div class="modal" style="max-width:460px">
-            <h3>Finish this session</h3>
-            <p>How would you like to wrap up?</p>
+        <div class="modal" style="max-width:500px">
+            <h3>What would you like to do?</h3>
+            <p style="color:var(--text-secondary);margin-bottom:20px;">Your conversation has been saved automatically.</p>
             <div class="complete-options">
                 <div class="complete-option selected" data-action="complete" onclick="selectCompleteOption(this)">
                     <div class="complete-option-radio"></div>
                     <div class="complete-option-text">
-                        <h4>✅ Mark as Complete</h4>
-                        <p>Send for design review</p>
+                        <h4>📤 Submit for Design Review <span style="font-size:0.7rem;padding:2px 8px;border-radius:20px;background:rgba(0,200,150,0.12);color:#00c896;font-weight:600;margin-left:6px;">Recommended</span></h4>
+                        <p>You're happy with the requirements. Our team will review them and create a solution design for your project. <strong>You'll be notified when it's ready.</strong></p>
+                        <p style="margin-top:8px;font-size:0.78rem;color:#06b6d4;">→ Project status changes to "Submitted for Review"</p>
                     </div>
                 </div>
                 <div class="complete-option" data-action="pause" onclick="selectCompleteOption(this)">
                     <div class="complete-option-radio"></div>
                     <div class="complete-option-text">
-                        <h4>⏸️ Save &amp; Continue Later</h4>
-                        <p>Everything is saved. Pick up exactly where you left off next time.</p>
+                        <h4>💬 Keep Session Open</h4>
+                        <p>Come back anytime to continue the conversation. Your progress is saved — pick up exactly where you left off.</p>
+                        <p style="margin-top:8px;font-size:0.78rem;color:var(--text-muted);">→ Project stays in "In Session" status</p>
                     </div>
                 </div>
             </div>
@@ -1277,6 +1279,13 @@
             inCall = false; isHeld = false; isMicMuted = false;
             exitCallUI();
             saveSession();
+            // Auto-analyse requirements after call ends
+            if (hasHadFirstCall) {
+                setTimeout(() => {
+                    showToastMsg('🔍 Analysing your conversation...');
+                    refreshRequirements();
+                }, 1500);
+            }
         });
         vapi.on('speech-start', () => {
             if (isHeld) { try { vapi.say(' ', false, false); } catch(e) {} muteRemoteAudio(true); return; }
