--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1062,7 +1062,7 @@
             <button class="tb-icon" id="attachBtn" onclick="document.getElementById('fileInput').click()" title="Attach files">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l8.57-8.57A4 4 0 1 1 18 8.84l-8.59 8.57a2 2 0 0 1-2.83-2.83l8.49-8.48"/></svg>
             </button>
-            <input type="file" id="fileInput" multiple style="display:none" onchange="handleFiles(this.files)">
+            <input type="file" id="fileInput" multiple style="display:none" onchange="handleFiles(this.files)" accept=".pdf,.doc,.docx,.txt,.csv,.xlsx,.xls,.pptx,.rtf,.md,.json,.xml,.yaml,.yml,.html,.css,.js,.png,.jpg,.jpeg,.gif,.webp,.svg">
 
             <div class="toolbar-divider"></div>
 
