--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1066,8 +1066,8 @@
 
             <div class="toolbar-divider"></div>
 
-            <button class="tb-icon" onclick="document.getElementById('feedbackModal').style.display='flex'" title="Send feedback">
-                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z"/></svg>
+            <button class="tb-text-btn" onclick="document.getElementById('feedbackModal').style.display='flex'" title="Send feedback" style="color:var(--text-secondary);border-color:rgba(255,255,255,0.08);">
+                Feedback
             </button>
 
             <div class="toolbar-divider"></div>
@@ -1095,9 +1095,9 @@
                         </div>
                     </div>
                     <div class="req-header-actions">
-                        <button class="pill-btn primary" id="refreshBtn" onclick="refreshRequirements()" title="AI analyses your conversation and builds requirements">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
-                            Analyse Requirements
+                        <button class="pill-btn primary" id="refreshBtn" onclick="refreshRequirements()" title="AI analyses your conversation and refreshes requirements">
+                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12a9 9 0 1 1-9-9c2.52 0 4.93 1 6.74 2.74L21 8"/><path d="M21 3v5h-5"/></svg>
+                            Refresh Requirements
                         </button>
                         <button class="pill-btn" onclick="copyAllReqs()" title="Copy all">
                             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="14" height="14" x="8" y="8" rx="2" ry="2"/><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"/></svg>
@@ -1242,6 +1242,8 @@
     let uploadedFiles = [];
     let requirements = {};
     let hasHadFirstCall = false;
+    let messagesSinceLastRefresh = 0;
+    const AUTO_REFRESH_THRESHOLD = 50;
     let sessionContext = {
         projectName: '', topicsCovered: [], keyFacts: [], currentTopic: '', filesUploaded: []
     };
@@ -1302,10 +1304,12 @@
                 const role = msg.role === 'assistant' ? 'ai' : 'user';
                 if (isHeld && role === 'ai') return;
                 messages.push({ role, text: msg.transcript });
+                messagesSinceLastRefresh++;
                 addTranscriptMsg(role, msg.transcript);
                 if (role === 'user') sessionContext.keyFacts.push(msg.transcript);
                 if (role === 'ai') trackTopics(msg.transcript);
                 if (messages.length % 4 === 0) saveSession();
+                if (messagesSinceLastRefresh >= AUTO_REFRESH_THRESHOLD) { messagesSinceLastRefresh = 0; refreshRequirements(); }
             }
         });
         vapi.on('error', (err) => {
@@ -1460,6 +1464,7 @@
         if (!text) return;
         input.value = '';
         messages.push({ role: 'user', text });
+        messagesSinceLastRefresh++;
         addTranscriptMsg('user', text);
         const thinkingEl = addTranscriptMsg('ai', '💭 Thinking...');
         try {
@@ -1471,7 +1476,9 @@
             const data = await response.json();
             thinkingEl.remove();
             messages.push({ role: 'ai', text: data.response });
+            messagesSinceLastRefresh++;
             addTranscriptMsg('ai', data.response);
+            if (messagesSinceLastRefresh >= AUTO_REFRESH_THRESHOLD) { messagesSinceLastRefresh = 0; refreshRequirements(); }
             saveSession();
         } catch (error) {
             console.error('Chat error:', error);
@@ -1584,17 +1591,18 @@
     }
 
     // ── Refresh requirements (real API) ──
-    async function refreshRequirements() {
+    async function refreshRequirements(silent) {
+        messagesSinceLastRefresh = 0;
         let filesToAnalyze = window.fileContents || {};
         if (Object.keys(filesToAnalyze).length===0 && uploadedFiles.length>0) {
             filesToAnalyze = {};
             uploadedFiles.forEach(f => { if (f.extracted_text) filesToAnalyze[f.original_name]=f.extracted_text; });
         }
-        if (messages.length===0 && Object.keys(filesToAnalyze).length===0) { showToastMsg('⚠️ No conversation or files to analyze yet'); return; }
+        if (messages.length===0 && Object.keys(filesToAnalyze).length===0) { if(!silent) showToastMsg('⚠️ No conversation or files to analyze yet'); return; }
 
         const btn = document.getElementById('refreshBtn');
         const origHTML = btn.innerHTML;
-        btn.innerHTML = '⏳ Analyzing...'; btn.disabled = true;
+        if(!silent){ btn.innerHTML = '⏳ Refreshing...'; btn.disabled = true; }
         try {
             const response = await fetch('/api/analyze-session', {
                 method:'POST', headers:{'Content-Type':'application/json'},
@@ -1612,9 +1620,9 @@
                     if (additions.length>0) requirements[cat]=[...requirements[cat],...additions];
                 }
             }
-            renderRequirements(); showToast(); saveSession();
-        } catch(e) { console.error('Refresh failed:',e); showToastMsg('⚠️ Analysis failed: '+e.message); }
-        finally { btn.innerHTML=origHTML; btn.disabled=false; }
+            renderRequirements(); if(!silent)showToast(); saveSession();
+        } catch(e) { console.error('Refresh failed:',e); if(!silent) showToastMsg('⚠️ Refresh failed: '+e.message); }
+        finally { if(!silent){ btn.innerHTML=origHTML; btn.disabled=false; } }
     }
 
     // ── File handling ──
@@ -1791,6 +1799,8 @@
         if(inCall)endCall();
         await saveSession();
         if(selectedCompleteAction==='complete'){
+            // Refresh requirements before submitting for design review
+            if(messages.length>0){ showToastMsg('⏳ Refreshing requirements before submission...'); await refreshRequirements(true); }
             try{
                 const res=await fetch('/api/projects/'+projectId+'/complete',{method:'POST',headers:{'Content-Type':'application/json'}});
                 if(!res.ok)throw new Error('Failed');
