Add Files tab to mobile bottom bar, 4-tab layout

--- a/public/voice-session.html
+++ b/public/voice-session.html
@@ -1581,15 +1581,18 @@
             if (controlsPanel) controlsPanel.style.display = 'flex';
         } else if (tab === 'requirements') {
             if (reqPanel) reqPanel.classList.add('mobile-open');
-        } else if (tab === 'chat') {
+        } else if (tab === 'chat' || tab === 'files') {
             if (sidebar) {
                 sidebar.classList.add('mobile-open');
-                document.querySelectorAll('.sidebar-tab').forEach(t => t.classList.remove('active'));
-                const transcriptTab = document.querySelector('.sidebar-tab');
-                if (transcriptTab) transcriptTab.classList.add('active');
+                // Activate the right sidebar tab
+                const targetTab = tab === 'chat' ? 'transcript' : 'files';
+                document.querySelectorAll('.sidebar-tab').forEach(t => {
+                    t.classList.toggle('active', t.dataset.tab === targetTab);
+                });
                 document.querySelectorAll('.sidebar-content > div').forEach(d => d.style.display = 'none');
-                const transcript = document.querySelector('.transcript');
-                if (transcript) transcript.style.display = 'block';
+                const panelClass = targetTab === 'files' ? '.files-panel' : '.transcript';
+                const targetPanel = document.querySelector(panelClass);
+                if (targetPanel) targetPanel.style.display = 'block';
             }
         }
     }
@@ -2108,6 +2111,10 @@ async function submitFeedback(){
         <button class="mobile-tab" data-tab="chat" onclick="switchMobileTab('chat')">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
             Chat
+        </button>
+        <button class="mobile-tab" data-tab="files" onclick="switchMobileTab('files')">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m21.44 11.05-9.19 9.19a6 6 0 0 1-8.49-8.49l8.57-8.57A4 4 0 1 1 18 8.84l-8.59 8.57a2 2 0 0 1-2.83-2.83l8.49-8.48"/></svg>
+            Files
         </button>
     </div>
 </body>
